@@ -5,6 +5,7 @@
 -revise rect move/inflate args processing.
 -add env check.
 -revise quit method to stop timers.
+-update time set_timer for event argument.
 -update for python 2/3 compatibility.
 
 0.29    2021-04-06
